# copick-server

./: .coverage  .coverage.CZIMACOS4852.local.87746.XPJccGXx  Dockerfile  Makefile  coverage.xml  docker-compose.yml  example_copick.json  pyproject.toml
.github/workflows/: argus-stack-rdev-create.yml  argus-stack-rdev-delete.yaml  argus-stack-staging-upsert.yaml  docker-build-rdev.yaml  docker-build-staging-prod.yaml  tests.yml  workflow-argus-docker-build.yaml
.infra/: common.yaml
.infra/rdev/: Chart.yaml  values.yaml
.infra/staging/: Chart.yaml  values.yaml
copick_server/: client.py  demo_server.py  server.py
tests/: test_route_handlers.py  test_server.py
