[project]
name = "copick-server"
version = "0.1.0"
description = "Server for hosting Copick data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "copick>=1.0.2",
    "copick-utils>=0.0.1",
    "fastapi>=0.115.12",
    "fsspec>=2025.3.2",
    "numpy>=2.2.4",
    "uvicorn>=0.34.1",
    "zarr>=2.18.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pytest-cov",
]

dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copick_server"]

[tool.uv.sources]
copick-utils = { git = "https://github.com/copick/copick-utils" }
